@@ -18,6 +18,9 @@ Ipe 7.3.1
 
  * New function to add several style sheets at once by name.
 
+ * Apply text padding also when displaying text XForm objects inside
+   Ipe (bug #531).
+
  * Fix graph node moving tool leaving edges in a weird state (bug #512).
 
  * Fix crash when editing XML of an image object (bug #532).
